--- a/CSS/style.css
+++ b/CSS/style.css
@@ -364,16 +364,16 @@ nav ul li:hover {
 
 .about-us {
     margin-right: 10px;
-    width: 400px;
+    width: 346px;
 }
 
 .contact-us {
     margin-right: 10px;
-    width: 100%;
+    width: 436px;
 }
 
 .subscribe {
-    width: 100%;
+    width: 255px;
 }
 
 .subscribe input {
